--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -33,6 +33,9 @@ jobs:
       - name: Build with Next.js 🏗️
         run: npx next build
 
+      - name: Show stuff
+        run: ls -lah
+
       - name: Upload artifact 📡
         uses: actions/upload-pages-artifact@v3
         with:
