--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,21 +25,8 @@ jobs:
       - name: Setup Node.js ⚙️ - Cache dependencies ⚡ - Install dependencies 🔧
         uses: ./.github/workflows/setup-node
 
-      - name: Setup Pages ⚙️
-        uses: actions/configure-pages@v4
-        with:
-          static_site_generator: next
-
-      - name: Build with Next.js 🏗️
-        run: npm run build
-
-      - name: Show stuff
-        run: ls -lah
-
-      - name: Upload artifact 📡
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: out
+      - name: Build and upload next project
+        uses: ./.github/workflows/build-and-upload
 
   deploy:
     environment:
