--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "build_fix": "next build && bash fix_export_ssg.sh",
     "lint": "next lint"
   },
   "dependencies": {
@@ -16,6 +15,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "replace-in-files-cli": "^2.2.0",
     "sharp": "^0.33.3"
   },
   "devDependencies": {
